force-app/main/default/objects/GI_News_Event__c/GI_News_Event__c.object-meta.xml
<CustomObject>
    <label>GI News & Event</label>
    <pluralLabel>GI News & Events</pluralLabel>
    <nameField>
        <displayFormat>NE-{0000}</displayFormat>
        <label>News/Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <labelPlural>GI News & Events</labelPlural>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>